[gd_scene load_steps=5 format=3 uid="uid://b7227lh736bjg"]

[ext_resource type="Script" uid="uid://b0v5oytdqd0u7" path="res://scenes/ui/stats_container/stats_container.gd" id="1_agl2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q67w4"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agl2i"]
bg_color = Color(0.0392157, 0.713726, 0.878431, 0.313726)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_q67w4"]
font_size = 24

[node name="StatsContainer" type="Panel"]
custom_minimum_size = Vector2(480, 550)
offset_right = 480.0
offset_bottom = 550.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q67w4")
script = ExtResource("1_agl2i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatsHealth" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsHealth"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "MAX HP: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsHPRegen" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsHPRegen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "HP REGEN: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="HPRegenLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsHPRegen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsLifeSteal" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsLifeSteal"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "% LIFE STEAL: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="LifeStealLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsLifeSteal"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsDamage" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsDamage"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "DAMAGE: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsDamage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsLuck" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsLuck"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "LUCK: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="LuckLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsLuck"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsSpeed" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsSpeed"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "SPEED: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsSpeed"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsBlock" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsBlock"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "% BLOCK CHANCE: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="BlockLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsBlock"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2

[node name="StatsHarvesting" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_agl2i")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsHarvesting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 114.0
offset_bottom = 14.5
grow_vertical = 2
text = "HARVESTING: "
label_settings = SubResource("LabelSettings_q67w4")

[node name="HarvestingLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsHarvesting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_q67w4")
horizontal_alignment = 2
